force-app/main/default/objects/Case/fields/Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code__c</fullName>
    <label>Problem Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receipts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>