force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity Gains</fullName>
            </value>
            <value>
                <fullName>Enlisted NAVET/OSVET Strength Gain</fullName>
            </value>
            <value>
                <fullName>Enlisted Service Record</fullName>
            </value>
            <value>
                <fullName>Enlisted Strength Gain</fullName>
            </value>
            <value>
                <fullName>Enlisted to Officer Conversions (AC)</fullName>
            </value>
            <value>
                <fullName>ESO</fullName>
            </value>
            <value>
                <fullName>Extensions</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>MILPAY</fullName>
            </value>
            <value>
                <fullName>NAVPTO_Transportation</fullName>
            </value>
            <value>
                <fullName>Officer Strength Gain (AC)</fullName>
            </value>
            <value>
                <fullName>Reenlistments</fullName>
            </value>
            <value>
                <fullName>Reserves</fullName>
            </value>
            <value>
                <fullName>Retirements/Separations</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
            <value>
                <fullName>Transient</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Travel Advance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>