force-app/main/default/objects/Case/fields/Routed_PSD__c.field-meta.xml
<CustomField>
    <fullName>Routed_PSD__c</fullName>
    <label>Routed PSD</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFLOAT EAST</fullName>
            </value>
            <value>
                <fullName>AFLOAT WEST</fullName>
            </value>
            <value>
                <fullName>ATSUGI</fullName>
            </value>
            <value>
                <fullName>BAHRAIN</fullName>
            </value>
            <value>
                <fullName>CHARLESTON</fullName>
            </value>
            <value>
                <fullName>DJIBOUTI (CSD OF BAHRAIN)</fullName>
            </value>
            <value>
                <fullName>EVERETT</fullName>
            </value>
            <value>
                <fullName>GREAT LAKES</fullName>
            </value>
            <value>
                <fullName>GUAM</fullName>
            </value>
            <value>
                <fullName>GUANTANAMO BAY</fullName>
            </value>
            <value>
                <fullName>JACKSONVILLE</fullName>
            </value>
            <value>
                <fullName>KITSAP</fullName>
            </value>
            <value>
                <fullName>LEMOORE</fullName>
            </value>
            <value>
                <fullName>MAYPORT</fullName>
            </value>
            <value>
                <fullName>MONTEREY</fullName>
            </value>
            <value>
                <fullName>NAPLES</fullName>
            </value>
            <value>
                <fullName>NEW LONDON</fullName>
            </value>
            <value>
                <fullName>NORTH ISLAND</fullName>
            </value>
            <value>
                <fullName>OCEANA</fullName>
            </value>
            <value>
                <fullName>OKINAWA</fullName>
            </value>
            <value>
                <fullName>PEARL HARBOR</fullName>
            </value>
            <value>
                <fullName>PENSACOLA</fullName>
            </value>
            <value>
                <fullName>ROTA</fullName>
            </value>
            <value>
                <fullName>SAN ANTONIO</fullName>
            </value>
            <value>
                <fullName>SAN DIEGO</fullName>
            </value>
            <value>
                <fullName>SASEBO</fullName>
            </value>
            <value>
                <fullName>SIGONELLA</fullName>
            </value>
            <value>
                <fullName>TPD MEMPHIS</fullName>
            </value>
            <value>
                <fullName>TSC GREAT LAKES</fullName>
            </value>
            <value>
                <fullName>TSC MEMPHIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>